RESOLVED FIXED103177
[EFL][WK2] Check errors in EwkView callbacks usage at compile time
https://bugs.webkit.org/show_bug.cgi?id=103177
Summary [EFL][WK2] Check errors in EwkView callbacks usage at compile time
Mikhail Pozdnyakov
Reported 2012-11-24 07:52:09 PST
Errors in EwkView callbacks usage shall be checked at compile time.
Attachments
patch (3.01 KB, patch)
2012-11-24 07:58 PST, Mikhail Pozdnyakov
no flags
Mikhail Pozdnyakov
Comment 1 2012-11-24 07:58:00 PST
Chris Dumez
Comment 2 2012-11-24 08:26:01 PST
Cool :) Looks good.
WebKit Review Bot
Comment 3 2012-11-24 08:46:47 PST
Comment on attachment 175858 [details] patch Clearing flags on attachment: 175858 Committed r135652: <http://trac.webkit.org/changeset/135652>
WebKit Review Bot
Comment 4 2012-11-24 08:46:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.