[EFL][WK2] Check errors in EwkView callbacks usage at compile time https://bugs.webkit.org/show_bug.cgi?id=103177

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-11-24
Reviewed by Kenneth Rohde Christiansen.

Errors in EwkView callbacks usage are now checked at compile time.

* UIProcess/API/efl/EwkViewCallbacks.h:
(CallBack):
(EwkViewCallbacks::CallBack::CallBack):
(EwkViewCallbacks::CallBack::call):

Canonical link: https://commits.webkit.org/121312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135652 268f45cc-cd09-0410-ab3c-d52691b4dbfc